[tool.poetry]
name = "podmaker"
version = "0.1.0"
description = "Turn YouTube playlist into podcast feeds ."
authors = ["YogiLiu <YogiLiu@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.27"
yt-dlp = "^2023.7.6"
tomlkit = "^0.12.1"
pydantic = {extras = ["email"], version = "^2.2.0"}
typing-extensions = "^4.7.1"
python-dateutil = "^2.8.2"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
boto3-stubs = { extras = ["essential"], version = "^1.28.27" }
autohooks = "^23.7.0"
autohooks-plugin-ruff = "^23.6.1"
autohooks-plugin-mypy = "^23.3.0"
types-python-dateutil = "^2.8.19.14"

[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.mypy", "autohooks.plugins.ruff"]

[tool.ruff]
select = ["C90", "F", "I", "PL"]
target-version = "py39"
line-length = 120

[tool.mypy]
python_version = "3.9"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["yt_dlp", "apscheduler.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
